# ties341-schemes

./: Explicit.hs  Folds.hs  Implicit.hs  README.md  schemes.cabal
