name:                ties341-schemes
version:             0.0.0
synopsis:            Example for the course TIES341
description:         Lots of recursion!
license:             GPL-3
license-file:        LICENSE
author:              Sampsa Kiiskinen
maintainer:          tuplanolla@gmail.com
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable folds
  main-is:             Folds.hs
  build-depends:       base >=4.8 && <5.0
  default-language:    Haskell2010

executable explicit
  main-is:             Explicit.hs
  other-extensions:    TupleSections
  build-depends:       base >=4.8 && <5.0,
                       containers >=0.5 && <1.0
  default-language:    Haskell2010

executable implicit
  main-is:             Implicit.hs
  other-extensions:    DeriveFoldable, DeriveFunctor, DeriveTraversable,
                       TupleSections
  build-depends:       base >=4.8 && <5.0,
                       containers >=0.5 && <1.0,
                       data-fix >=0.0.1 && <0.1.0,
                       transformers >=0.4 && <1.0
  default-language:    Haskell2010
